--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lynx Sweeper</title>
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
@@ -10,7 +12,7 @@
     <h1>Lynx Sweeper</h1>
     <div class="instructions">
         <h2>Instructions:</h2>
-        <p> Lynx have gone missing and it's your job to find them.</p>
+        <p> Some lynx have gone missing and it's your job to find them.</p>
         <p> Select the Forest size you'd like to search in.</p>
         <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
         <p> Click on the squares to find all the lynx in the forest but beware of the snakes.</p>
