made cards appear on the screen and added translucent background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lynx Sweeper</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <script defer src="index.js"></script>
 </head>
 <body>
 <header>
@@ -17,7 +18,10 @@
         <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
         <p> Click on the squares to find all the lynx in the forest but beware of the snakes.</p>
     </div>
-</header>
+    <h1>Locate the Lynx</h1>
+    <div id="gridContainer">
 
+    </div>
+</header>
 </body>
 </html>
