--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </div>
     <div class="form">
         <form method="post">
-            <div class="input">
-                <div class="forest">
+            <div class="inputContainer">
+                <div class="userInput">
                     <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2">
+                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100">
                 </div>
-                <div class="lynx">
+                <div class="userInput">
                     <label for ="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1">
+                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50">
                 </div>
             </div>
 
