reverted back to our version of code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lynx Sweeper</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <script defer src="index.js"></script>
 </head>
 <body>
 <header>
@@ -15,28 +16,12 @@
         <p> Some lynx have gone missing and it's your job to find them.</p>
         <p> Select the Forest size you'd like to search in.</p>
         <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
-        <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
+        <p> Click on the squares to find all the lynx in the forest but beware of the snakes.</p>
     </div>
-    <div class="form">
-        <form method="post">
-            <div class="input">
-                <div class="forest">
-                    <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2">
-                </div>
-                <div class="lynx">
-                    <label for ="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1">
-                </div>
-            </div>
+    <h1>Locate the Lynx</h1>
+    <div id="gridContainer">
 
-            <div class="button">
-                <input type="submit" id="button" value="Let's find some Lynx!">
-            </div>
-
-        </form>
     </div>
 </header>
-
 </body>
 </html>
