--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lynx Sweeper</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <script defer src="index.js"></script>
 </head>
 <body>
 <header>
@@ -18,15 +19,15 @@
         <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
     </div>
     <div class="form">
-        <form method="post">
+        <form method="post" id="inputForm">
             <div class="inputContainer">
                 <div class="userInput">
                     <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100">
+                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100" required>
                 </div>
                 <div class="userInput">
                     <label for ="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50">
+                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
                 </div>
             </div>
 
