--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="inputContainer">
                 <div class="userInput">
                     <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100">
+                    <input type="number" class="inputBox" id="gridSize" name="gridSize">
                 </div>
                 <div class="userInput">
                     <label for ="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50">
+                    <input type="number" class="inputBox" id="numLynx" name="numLynx">
                 </div>
             </div>
 
