--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         </form>
     </div>
-    <h1>Locate the Lynx</h1>
+    <h1 id="gameTitle">Locate the Lynx</h1>
     <div id="gridContainer">
 
     </div>
