--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script defer src="index.js"></script>
+
 </head>
 <body>
 <header>
@@ -19,28 +20,25 @@
         <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
     </div>
     <div class="form">
-        <form>
+        <form method="post">
             <div class="inputContainer">
                 <div class="userInput">
                     <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize">
+                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100">
                 </div>
                 <div class="userInput">
                     <label for ="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx">
+                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50">
                 </div>
             </div>
 
             <div class="button">
-                <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
+                <input type="submit" id="button" value="Let's find some Lynx!">
             </div>
 
         </form>
     </div>
-    <h1 id="gameTitle">Locate the Lynx</h1>
-    <div id="gridContainer">
-
-    </div>
 </header>
+
 </body>
 </html>
