adds event listeners and form validation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="button">
                 <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
             </div>
-
+            <p id="errorMessage"></p>
         </form>
     </div>
     <h1 id="gameTitle">Locate the Lynx</h1>
