reformatting according to mike's trainer review

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <p id="errorMessage"></p>
         </form>
     </div>
-    <h1 id="gameTitle">Locate the Lynx</h1>
-    <div id="gridContainer">
-
-    </div>
+    <section id="hide">
+        <h1 id="gameTitle" class="hide">Locate the Lynx</h1>
+        <div id="gridContainer" class="hide"></div>
+    </section>
 </header>
 </body>
 </html>
