--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
                     <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
                 </div>
             </div>
-
             <div class="button">
                 <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
             </div>
             <p id="errorMessage"></p>
         </form>
     </div>
-    <section id="hide">
-        <h1 id="gameTitle" class="hide">Locate the Lynx</h1>
-        <div id="gridContainer" class="hide"></div>
-    </section>
 </header>
+<section id="hide">
+    <h1 id="gameTitle">Locate the Lynx</h1>
+    <div id="gridContainer"></div>
+</section>
 </body>
 </html>
