adds new game function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <h1>Lynx Sweeper</h1>
+    <h1 id="mainTitle">Lynx Sweeper</h1>
     <div class="instructions">
         <h2>Instructions:</h2>
         <p> Some lynx have gone missing and it's your job to find them.</p>
