modal active, working on css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script defer src="index.js"></script>
 </head>
 <body>
+<div class="modal-blur">
 <header>
-    <h1>Lynx Sweeper</h1>
+    <h1 class="fake-event" id="mainTitle">Lynx Sweeper</h1>
     <div class="instructions">
         <h2>Instructions:</h2>
         <p> Some lynx have gone missing and it's your job to find them.</p>
@@ -41,5 +42,14 @@
     <h1 id="gameTitle">Locate the Lynx</h1>
     <div id="gridContainer"></div>
 </section>
+</div>
+
+    <div class="endModal">
+        <div class="endModalContent">
+            <h2>content content content content content</h2>
+            <button type="submit" class="play-again">Play again!</button>
+        </div>
+    </div>
+
 </body>
 </html>
