--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="modal-blur">
 <header>
-    <h1 class="fake-event" id="mainTitle">Lynx Sweeper</h1>
+    <h1 id="mainTitle">Lynx Sweeper</h1>
     <div class="instructions">
         <h2>Instructions:</h2>
         <p> Some lynx have gone missing and it's your job to find them.</p>
@@ -46,7 +46,7 @@
 
     <div class="endModal">
         <div class="endModalContent">
-            <h2>content content content content content</h2>
+            <h2></h2>
             <button type="submit" class="play-again">Play again!</button>
         </div>
     </div>
