modal css and linking score function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </form>
     </div>
 </header>
-<section id="hide">
+<section id="gameContainer">
     <h1 id="gameTitle">Locate the Lynx</h1>
     <div id="gridContainer"></div>
 </section>
@@ -46,8 +46,8 @@
 
     <div class="endModal">
         <div class="endModalContent">
-            <h2></h2>
-            <button type="submit" class="play-again">Play again!</button>
+            <h2 class="scoreMessage"></h2>
+            <button class="play-again">Play again!</button>
         </div>
     </div>
 
