Made modal css cleaner, removed redundant code

--- a/index.html
+++ b/index.html
@@ -10,46 +10,43 @@
 </head>
 <body>
 <div class="modal-blur">
-<header>
-    <h1 id="mainTitle">Lynx Sweeper</h1>
-    <div class="instructions">
-        <h2>Instructions:</h2>
-        <p> Some lynx have gone missing and it's your job to find them.</p>
-        <p> Select the Forest size you'd like to search in.</p>
-        <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
-        <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
-    </div>
-    <div class="form">
-        <form method="post" id="inputForm">
-            <div class="inputContainer">
-                <div class="userInput">
-                    <label for="gridSize">How big is the forest?</label>
-                    <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100" required>
-                </div>
-                <div class="userInput">
-                    <label for="numLynx">How many Lynx?</label>
-                    <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
-                </div>
-            </div>
-            <div class="button">
-                <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
-            </div>
-            <p id="errorMessage"></p>
-        </form>
-    </div>
-</header>
-<section id="gameContainer">
-    <h1 id="gameTitle">Locate the Lynx</h1>
-    <div id="gridContainer"></div>
-</section>
-</div>
-
-    <div class="endModal">
-        <div class="endModalContent">
-            <h2 class="scoreMessage"></h2>
-            <button class="play-again">Play again!</button>
+    <header>
+        <h1 id="mainTitle">Lynx Sweeper</h1>
+        <div class="instructions">
+            <h2>Instructions:</h2>
+            <p> Some lynx have gone missing and it's your job to find them.</p>
+            <p> Select the Forest size you'd like to search in.</p>
+            <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
+            <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
         </div>
-    </div>
+        <div class="form">
+            <form method="post" id="inputForm">
+                <div class="inputContainer">
+                    <div class="userInput">
+                        <label for="gridSize">How big is the forest?</label>
+                        <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100" required>
+                    </div>
+                    <div class="userInput">
+                        <label for="numLynx">How many Lynx?</label>
+                        <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
+                    </div>
+                </div>
+                <div class="button">
+                    <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
+                </div>
+                <p id="errorMessage"></p>
+            </form>
+        </div>
+    </header>
+    <section id="gameContainer">
+        <h1 id="gameTitle">Locate the Lynx</h1>
+        <div id="gridContainer"></div>
+    </section>
+</div>
+<div class="endModalContent">
+    <h2 class="scoreMessage"></h2>
+    <button>Play again!</button>
+</div>
 
 </body>
 </html>
