added lives counter bar

--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
             </form>
         </div>
     </header>
+
     <section id="gameContainer">
         <h1 id="gameTitle">Locate the Lynx</h1>
+        <div id="livesCounterBar">
+            <h2 class="livesDisplay"></h2>
+            <h2 class="lynxFoundDisplay"></h2>
+        </div>
         <div id="gridContainer"></div>
     </section>
+
 </div>
 <div class="endModalContent">
     <h2 class="scoreMessage"></h2>
