live indicator of lives before game starts + css

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                         <label for="numLynx">How many Lynx?</label>
                         <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
                     </div>
+                    <div class="userInput">
+                        <label for="preLives">You will have this many lives:</label>
+                        <p class="inputBox" id="preLives"> - </p>
+                    </div>
                 </div>
                 <div class="button">
                     <a href="#gridContainer" ><input type="submit" id="button" value="Let's find some Lynx!"></a>
