--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <label for="gridSize">How big is the forest?</label>
                         <input type="number" class="inputBox" id="gridSize" name="gridSize" min="2" max="100" required>
                     </div>
-                    <div class="userInput">
+                    <div class="userInput" id="lynxInput">
                         <label for="numLynx">How many Lynx?</label>
                         <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
                     </div>
