ammended to comments, general css and new  media query made

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p> Some lynx have gone missing and it's your job to find them.</p>
             <p> Select the Forest size you'd like to search in.</p>
             <p> Pick how many lynx you are looking for (no more than half of the number you picked for the Forest size) then click the play button.</p>
-            <p> Click on the squares to find all the lynx in the forest... but beware of the snakes!</p>
+            <p> Click on the squares to find all the lynx in the forest... but beware of the snakes! You will lose a life each time you get bitten!</p>
         </div>
         <div class="form">
             <form method="post" id="inputForm">
@@ -31,7 +31,7 @@
                         <input type="number" class="inputBox" id="numLynx" name="numLynx" min="1" max="50" required>
                     </div>
                     <div class="userInput">
-                        <label for="preLives">You will have this many lives:</label>
+                        <label for="preLives">Number of lives:</label>
                         <p class="inputBox" id="preLives"> - </p>
                     </div>
                 </div>
